<resources>
    <string name="app_name">Calcula tu peso ideal</string>
    <string name="menu_about">About</string>
    <string name="menu_close">Close</string>
    
    <string name="imageViewHeader_Description">Hello its me</string>
    <string name="textViewEstatura_Text">Estatura: </string>
    <string name="textViewPeso_Text">Peso: </string>
    <string name="buttonSend_Text">Enviar</string>
</resources>
